force-app/main/default/objects/VITauxIncorporation__c/VITauxIncorporation__c.object-meta.xml
<CustomObject>
    <label>Taux d&apos;incorporation</label>
    <nameField>
        <displayFormat>TI{00000}</displayFormat>
        <label>Ref de Taux d&apos;incorporation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taux d&apos;incorporation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>