force-app/main/default/objects/VITauxIncorporation__c/fields/Libelle_sous_domaine__c.field-meta.xml
<CustomField>
    <fullName>Libelle_sous_domaine__c</fullName>
    <formula>Produit_SousDomaine__r.Libelle_sous_domaine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé sous-domaine</label>
    <type>Text</type>
</CustomField>