force-app/main/default/objects/VITauxIncorporation__c/fields/Produit_SousDomaine__c.field-meta.xml
<CustomField>
    <fullName>Produit_SousDomaine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit - SousDomaine</label>
    <referenceTo>VISousDomaine__c</referenceTo>
    <relationshipLabel>Taux d&apos;incorporation</relationshipLabel>
    <relationshipName>Taux_d_incorporation</relationshipName>
    <type>Lookup</type>
</CustomField>