force-app/main/default/objects/VITauxIncorporation__c/fields/Taux_complet__c.field-meta.xml
<CustomField>
    <fullName>Taux_complet__c</fullName>
    <label>Taux complet</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>