force-app/main/default/objects/VITauxIncorporation__c/fields/Taux_PRI__c.field-meta.xml
<CustomField>
    <fullName>Taux_PRI__c</fullName>
    <label>Taux PRI</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>