force-app/main/default/objects/VITauxIncorporation__c/fields/Type_de_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type de dépense</label>
    <referenceTo>VIType_de_depense__c</referenceTo>
    <relationshipLabel>Taux d&apos;incorporation</relationshipLabel>
    <relationshipName>Taux_d_incorporation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>