force-app/main/default/objects/VITauxIncorporation__c/listViews/FR.listView-meta.xml
<ListView>
    <fullName>FR</fullName>
    <columns>NAME</columns>
    <columns>Type_de_depense__c</columns>
    <columns>Code_sous_domaine__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Taux_PRI__c</columns>
    <columns>Taux_complet__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_depense__c</field>
        <operation>startsWith</operation>
        <value>MAT</value>
    </filters>
    <label>FR</label>
</ListView>