force-app/main/default/objects/VITauxIncorporation__c/listViews/FR_LOC.listView-meta.xml
<ListView>
    <fullName>FR_LOC</fullName>
    <columns>NAME</columns>
    <columns>Type_de_depense__c</columns>
    <columns>Code_sous_domaine__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Taux_PRI__c</columns>
    <columns>Taux_complet__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_sous_domaine__c</field>
        <operation>equals</operation>
        <value>LOC</value>
    </filters>
    <label>FR - LOC</label>
</ListView>